[package]
name         = "temporal-lens-server"
version      = "0.1.0"
authors      = ["Nicolas BARBOTIN <nicolas@barbot.in>", "Clément Poull"]
description  = "Temporal Lens Rust server - Temporal Lens is a telemetry infrastructure for Rust"
categories   = ["development-tools::profiling"]
keywords     = ["profiling", "telemetry"]
repository   = "https://github.com/temporal-lens-team/temporal-lens-server"
readme       = "README.md"
license      = "MIT OR Apache-2.0"
edition      = "2018"

[dependencies]
clap    = "2.33"
log     = "0.4"
fxhash  = "0.2"
rocket  = "0.4"
ctrlc   = "3.1"
bincode = "1.2"

[dependencies.temporal-lens]
path = "../temporal-lens" # If local, use local version
version = "0.1.0"         # If published, use the same version as this package
default-features = false
features = ["server-mode"]

[dependencies.log4rs]
version = "0.12"
features = ["toml_format"]

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "serve"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
rand = "0.7"
